# MFC_RL

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_LQ_REINFORCE.ipynb  01_analytical_framework_example.ipynb  02_discrete_space.ipynb  02_discrete_space_Meunier.ipynb  two state two action.ipynb  twostate_twoaction.ipynb
src/mfc/algorithms/: __init__.py  logits_mfreinforce.py  simplex_mfreinforce.py
src/mfc/environments/: __init__.py  cybersecurity.py  distribution_planning.py  twostate_twoaction.py
tests/: test_notebook02_optimizations.py
